--- a/front/sme/package.json
+++ b/front/sme/package.json
@@ -6,12 +6,13 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
+    "@mui/lab": "^5.0.0-alpha.137",
     "@mui/material": "^5.14.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "lodash": "^4.17.21",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-calendar": "^4.5.0",
