--- a/front/sme/package.json
+++ b/front/sme/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
+    "@mui/lab": "^5.0.0-alpha.137",
     "@mui/material": "^5.14.1",
+    "@mui/x-date-pickers": "^6.10.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "lodash": "^4.17.21",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-calendar": "^4.5.0",
