--- a/back/server/package.json
+++ b/back/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run baseline && nodemon ./src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage ./src/app.test.js",
     "baseline": "node PG_Run_Start_Migrate_Seed.js"
   },
   "author": "",
@@ -19,5 +19,8 @@
     "knex": "^2.5.1",
     "nodemon": "^3.0.1",
     "pg": "^8.11.1"
+  },
+  "devDependencies": {
+    "jest": "^29.6.2"
   }
 }
